feat(device): add device model api
