# src/config/swagger.json
@@ -17,7 +17,7 @@
   },
   "servers": [
     {
-      "url": "http://192.168.179.1:3002/v1",
+      "url": "http://192.168.179.1:3000/v1",
       "description": "API V1"
     }
   ],
@@ -618,6 +618,215 @@
             }
           }
         }
+      }
+    },
+    "/devicemodel": {
+      "post": {
+        "summary": "添加物模型",
+        "description": "添加物模型",
+        "tags": [
+          "物模型管理"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "Name": {
+                    "description": "物模型名称"
+                  },
+                  "Description": {
+                    "description": "物模型描述"
+                  },
+                  "ConnectType": {
+                    "description": "物模型连接类型"
+                  },
+                  "Data": {
+                    "description": "物模型内容(json)"
+                  }
+                },
+                "example": {
+                  "Name": "四路继电器模块",
+                  "Description": "四路继电器模块",
+                  "ConnectType": "1",
+                  "Data": "{}"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number",
+                      "description": "状态码",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "description": "信息",
+                      "example": "添加物模型成功"
+                    },
+                    "data": {
+                      "type": "object",
+                      "description": "用户信息",
+                      "example": {
+                        "OrganizationId": "3",
+                        "Name": "南方分部",
+                        "Description": "无",
+                        "Level": 1,
+                        "LevelName": "二级",
+                        "ParentId": "1",
+                        "CreatedBy": "4e1bb3f5-8c0b-4573-8e6f-abf93bdc4224",
+                        "CreatedTime": "2024-03-12T04:41:18.326Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "token": {}
+          },
+          {
+            "server_auth": [
+              "authorization"
+            ]
+          }
+        ]
+      }
+    },
+    "/devicemodels": {
+      "get": {
+        "summary": "查询全部物模型基本信息",
+        "description": "查询全部物模型基本信息",
+        "tags": [
+          "物模型管理"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number",
+                      "description": "状态码",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "description": "信息",
+                      "example": "添加物模型成功"
+                    },
+                    "data": {
+                      "type": "object",
+                      "description": "用户信息",
+                      "example": {
+                        "OrganizationId": "3",
+                        "Name": "南方分部",
+                        "Description": "无",
+                        "Level": 1,
+                        "LevelName": "二级",
+                        "ParentId": "1",
+                        "CreatedBy": "4e1bb3f5-8c0b-4573-8e6f-abf93bdc4224",
+                        "CreatedTime": "2024-03-12T04:41:18.326Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "token": {}
+          },
+          {
+            "server_auth": [
+              "authorization"
+            ]
+          }
+        ]
+      }
+    },
+    "/devicemodel/{id}": {
+      "get": {
+        "summary": "查询某个物模型的详细信息",
+        "description": "查询某个物模型的详细信息",
+        "tags": [
+          "物模型管理"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "description": "物模型id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number",
+                      "description": "状态码",
+                      "example": 200
+                    },
+                    "massage": {
+                      "type": "string",
+                      "description": "信息",
+                      "example": "添加物模型成功"
+                    },
+                    "data": {
+                      "type": "object",
+                      "description": "用户信息",
+                      "example": {
+                        "OrganizationId": "3",
+                        "Name": "南方分部",
+                        "Description": "无",
+                        "Level": 1,
+                        "LevelName": "二级",
+                        "ParentId": "1",
+                        "CreatedBy": "4e1bb3f5-8c0b-4573-8e6f-abf93bdc4224",
+                        "CreatedTime": "2024-03-12T04:41:18.326Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "token": {}
+          },
+          {
+            "server_auth": [
+              "authorization"
+            ]
+          }
+        ]
       }
     },
     "/example/post": {
@@ -1961,6 +2170,11 @@
       "name": "用户模块",
       "description": "用户管理模块",
       "baseurl": "/v1/account"
+    },
+    {
+      "name": "物模型管理",
+      "description": "物模型管理",
+      "baseurl": "/v1"
     },
     {
       "name": "数据库测试",
